Safari 10 /11 problem with if (!await get(something)). https://bugs.webkit.org/show_bug.cgi?id=176685

Reviewed by Saam Barati.

JSTests:

* stress/async-await-basic.js:
(awaitEpression.async):
* stress/async-await-syntax.js:
(testTopLevelAsyncAwaitSyntaxSloppyMode.testSyntax):
(prototype.testTopLevelAsyncAwaitSyntaxStrictMode):

Source/JavaScriptCore:

Using unary operator before `await` lead to count it as identifier.
According to spec https://tc39.github.io/ecma262/#sec-async-function-definitions
and Note 1 `await` is as AwaitExpression and it is allowed to use unary operator

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parsePrimaryExpression):


Canonical link: https://commits.webkit.org/194314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223043 268f45cc-cd09-0410-ab3c-d52691b4dbfc